Projet GL/Projet_GL/src/test/deca/context/valid/increment4/init-null.deca
// Test A a = null

// Historique : cree le 20/01/2023

class A{}

{
    A a = null;
}